- Penambahan fungsi agar dapat melakukan penjumlahan, pengurangan, perkalian, dan pembagian

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,11 +34,10 @@
         app:layout_constraintTop_toBottomOf="@+id/btnbersihkan" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/hasil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="0"
         android:textColor="#302E2E"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,13 +49,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Masukkan Angka Pertama"
+        android:inputType="number"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtjudul" />
 
@@ -65,11 +64,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="68dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Masukkan Angka Kedua"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +78,7 @@
         android:layout_width="69dp"
         android:layout_height="52dp"
         android:layout_marginTop="48dp"
+        android:onClick="btntambah"
         android:text="+"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
@@ -91,6 +90,7 @@
         android:layout_width="69dp"
         android:layout_height="52dp"
         android:layout_marginTop="48dp"
+        android:onClick="btnkurang"
         android:text="-"
         app:layout_constraintEnd_toStartOf="@+id/btnkali"
         app:layout_constraintHorizontal_bias="0.232"
@@ -102,6 +102,7 @@
         android:layout_width="69dp"
         android:layout_height="52dp"
         android:layout_marginTop="48dp"
+        android:onClick="btnbagi"
         android:text="/"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.883"
@@ -113,6 +114,7 @@
         android:layout_width="69dp"
         android:layout_height="52dp"
         android:layout_marginTop="48dp"
+        android:onClick="btnkali"
         android:text="*"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.652"
@@ -126,10 +128,37 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="50dp"
+        android:onClick="btnbersihkan"
         android:text="Bersihkan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnkurang" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Masukkan Angka Pertama"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtjudul" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Masukkan Angka Kedua"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtangkapertama" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
